tests/typechecker/pass/025-ref-cells.hyg
type refInt = ref {int};

let x: refInt = ref {100 / 2};
let y: ref {int} = ref {12 * 2};
x.value <- x.value + y.value
