tests/typechecker/fail/025-tuple-assignment-mismatch.hyg
let t: tuple {string, int, bool} = tuple {"Hello", 40 + 2, true};
t._2 <- "Hej"
